# resto

./: CLAUDE.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
docs/: ONBOARDING.md  PRD.md  STATE.md  operasi-voucher.md
docs/context/: architecture.md  cross-repo.md  integration-tests.md  kitchen-flow.md  payment-flow.md  printing.md  reporting.md
resto/: api.py  decorator.py  hooks.py  install.py  modules.txt  patches.txt  print_helpers.py  printing.py  utils.py  voucher_setup.py
resto/events/: pos_invoice.py  voucher_hooks.py
resto/patches/: backfill_pos_consumption_daily_summary.py  backfill_split_bill_category.py  drop_pos_consumption_pos_closing_column.py
resto/print_engine/: __init__.py  dispatcher.py  renderer.py  resolver.py
resto/repositories/: customer_repository.py  discount_repository.py  invoice_repository.py  kitchen_repository.py  menu_repository.py  pos_repository.py  printing_repository.py  reporting_repository.py  table_repository.py
resto/services/: discount_service.py  invoice_service.py  kitchen_service.py  payment_service.py  pos_service.py  printing_service.py  reporting_service.py  table_service.py
resto/templates/: daily_sales_full_report.html
resto/tests/: _test_login_with_pin.py  resto_pos_test_base.py  test_add_table_order.py  test_api_apply_discount.py  test_api_endpoints.py  test_concurrent_send_to_kitchen.py  test_create_pos_invoice.py  test_customer_repository.py  test_direct_sale.py  test_discount_repository.py  test_discount_service.py  test_invoice_service.py  test_kitchen_service.py  test_kitchen_service_extras.py  test_menu_repository.py  test_merge_table.py  test_merge_table_regression.py  test_move_invoice_items.py  test_payment_service.py  test_pos_invoice_events.py  test_pos_repository.py  test_pos_service.py  test_print_dispatcher.py  test_print_helpers.py  test_print_renderer.py  test_print_resolver.py  (+13 more)
(+159 files in other folders)
